Projekat_kompajler/semantic.output
Terminals unused in grammar

    _AROP


Grammar

    0 $accept: program $end

    1 program: global_variable_list function_list

    2 global_variable_list: %empty
    3                     | global_variable_list global_variable

    4 global_variable: _TYPE _ID _SEMICOLON

    5 function_list: function
    6              | function_list function

    7 $@1: %empty

    8 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body

    9 parameter: %empty
   10          | parameters

   11 parameters: _TYPE _ID
   12           | parameters _COMMA _TYPE _ID

   13 $@2: %empty

   14 body: _LBRACKET variable_list $@2 statement_list _RBRACKET

   15 variable_list: %empty
   16              | variable_list variable

   17 $@3: %empty

   18 variable: _TYPE $@3 vars _SEMICOLON

   19 vars: _ID
   20     | vars _COMMA _ID

   21 statement_list: %empty
   22               | statement_list statement

   23 statement: compound_statement
   24          | assignment_statement
   25          | if_statement
   26          | return_statement
   27          | increment_statement
   28          | for_statement
   29          | branch_statement
   30          | void_function_call
   31          | switch_statement
   32          | break_statement

   33 compound_statement: _LBRACKET statement_list _RBRACKET

   34 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   35 $@4: %empty

   36 $@5: %empty

   37 for_statement: _FOR _LPAREN _TYPE _ID _SEMICOLON $@4 rel_exp $@5 _SEMICOLON _ID _INC _RPAREN statement

   38 $@6: %empty

   39 $@7: %empty

   40 $@8: %empty

   41 $@9: %empty

   42 $@10: %empty

   43 $@11: %empty

   44 $@12: %empty

   45 $@13: %empty

   46 branch_statement: _BRANCH _LPAREN _ID _SEMICOLON literal _COMMA literal _COMMA literal _RPAREN $@6 _FIRST $@7 statement $@8 _SECOND $@9 statement $@10 _THIRD $@11 statement $@12 _OTHERWISE $@13 statement _END_BRANCH

   47 @14: %empty

   48 $@15: %empty

   49 switch_statement: _SWITCH _LPAREN _ID @14 _RPAREN $@15 _LBRACKET switch_sections _RBRACKET

   50 switch_sections: switch_section
   51                | switch_sections switch_section

   52 switch_section: switch_label switch_items

   53 switch_items: %empty
   54             | switch_items statement

   55 $@16: %empty

   56 switch_label: _CASE literal $@16 _TWO_DOTS

   57 $@17: %empty

   58 switch_label: _DEFAULT $@17 _TWO_DOTS

   59 break_statement: _BREAK _SEMICOLON

   60 conditional_exp: _LPAREN rel_exp _RPAREN _Q_MARK con_exp _TWO_DOTS con_exp

   61 con_exp: literal
   62        | _ID

   63 num_exp: exp

   64 exp: literal
   65    | _ID
   66    | function_call
   67    | _LPAREN num_exp _RPAREN
   68    | increment
   69    | conditional_exp
   70    | exp _ADD exp
   71    | exp _SUB exp
   72    | exp _MUL exp
   73    | exp _DIV exp
   74    | _SUB exp
   75    | exp _POW exp

   76 literal: _INT_NUMBER
   77        | _UINT_NUMBER

   78 increment_statement: increment _SEMICOLON

   79 increment: _ID _INC

   80 $@18: %empty

   81 void_function_call: _ID $@18 _LPAREN argument _RPAREN _SEMICOLON

   82 $@19: %empty

   83 function_call: _ID $@19 _LPAREN argument _RPAREN

   84 argument: %empty
   85         | arguments

   86 arguments: num_exp
   87          | arguments _COMMA num_exp

   88 if_statement: if_part
   89             | if_part _ELSE statement

   90 @20: %empty

   91 $@21: %empty

   92 if_part: _IF _LPAREN @20 rel_exp $@21 _RPAREN statement

   93 rel_exp: num_exp _RELOP num_exp

   94 return_statement: _RETURN _SEMICOLON
   95                 | _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    _TYPE <i> (258) 4 8 11 12 18 37
    _IF (259) 92
    _ELSE (260) 89
    _RETURN (261) 94 95
    _ID <s> (262) 4 8 11 12 19 20 34 37 46 49 62 65 79 81 83
    _INT_NUMBER <s> (263) 76
    _UINT_NUMBER <s> (264) 77
    _LPAREN (265) 8 37 46 49 60 67 81 83 92
    _RPAREN (266) 8 37 46 49 60 67 81 83 92
    _LBRACKET (267) 14 33 49
    _RBRACKET (268) 14 33 49
    _ASSIGN (269) 34
    _SEMICOLON (270) 4 18 34 37 46 59 78 81 94 95
    _AROP <i> (271)
    _ADD (272) 70
    _SUB (273) 71 74
    _MUL (274) 72
    _DIV (275) 73
    _RELOP <i> (276) 93
    _COMMA (277) 12 20 46 87
    _INC (278) 37 79
    _FOR (279) 37
    _Q_MARK (280) 60
    _TWO_DOTS (281) 56 58 60
    _BRANCH (282) 46
    _FIRST (283) 46
    _SECOND (284) 46
    _THIRD (285) 46
    _OTHERWISE (286) 46
    _END_BRANCH (287) 46
    _SWITCH (288) 49
    _CASE (289) 56
    _BREAK (290) 59
    _DEFAULT (291) 58
    _POW (292) 75
    ONLY_IF (293)
    PRIORITY (294)


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    program (41)
        on left: 1
        on right: 0
    global_variable_list (42)
        on left: 2 3
        on right: 1 3
    global_variable (43)
        on left: 4
        on right: 3
    function_list (44)
        on left: 5 6
        on right: 1 6
    function (45)
        on left: 8
        on right: 5 6
    $@1 (46)
        on left: 7
        on right: 8
    parameter (47)
        on left: 9 10
        on right: 8
    parameters (48)
        on left: 11 12
        on right: 10 12
    body (49)
        on left: 14
        on right: 8
    $@2 (50)
        on left: 13
        on right: 14
    variable_list (51)
        on left: 15 16
        on right: 14 16
    variable (52)
        on left: 18
        on right: 16
    $@3 (53)
        on left: 17
        on right: 18
    vars (54)
        on left: 19 20
        on right: 18 20
    statement_list (55)
        on left: 21 22
        on right: 14 22 33
    statement (56)
        on left: 23 24 25 26 27 28 29 30 31 32
        on right: 22 37 46 54 89 92
    compound_statement (57)
        on left: 33
        on right: 23
    assignment_statement (58)
        on left: 34
        on right: 24
    for_statement (59)
        on left: 37
        on right: 28
    $@4 (60)
        on left: 35
        on right: 37
    $@5 (61)
        on left: 36
        on right: 37
    branch_statement (62)
        on left: 46
        on right: 29
    $@6 (63)
        on left: 38
        on right: 46
    $@7 (64)
        on left: 39
        on right: 46
    $@8 (65)
        on left: 40
        on right: 46
    $@9 (66)
        on left: 41
        on right: 46
    $@10 (67)
        on left: 42
        on right: 46
    $@11 (68)
        on left: 43
        on right: 46
    $@12 (69)
        on left: 44
        on right: 46
    $@13 (70)
        on left: 45
        on right: 46
    switch_statement (71)
        on left: 49
        on right: 31
    @14 (72)
        on left: 47
        on right: 49
    $@15 (73)
        on left: 48
        on right: 49
    switch_sections (74)
        on left: 50 51
        on right: 49 51
    switch_section (75)
        on left: 52
        on right: 50 51
    switch_items (76)
        on left: 53 54
        on right: 52 54
    switch_label (77)
        on left: 56 58
        on right: 52
    $@16 (78)
        on left: 55
        on right: 56
    $@17 (79)
        on left: 57
        on right: 58
    break_statement (80)
        on left: 59
        on right: 32
    conditional_exp <i> (81)
        on left: 60
        on right: 69
    con_exp <i> (82)
        on left: 61 62
        on right: 60
    num_exp <i> (83)
        on left: 63
        on right: 34 67 86 87 93 95
    exp <i> (84)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75
        on right: 63 70 71 72 73 74 75
    literal <i> (85)
        on left: 76 77
        on right: 46 56 61 64
    increment_statement (86)
        on left: 78
        on right: 27
    increment <i> (87)
        on left: 79
        on right: 68 78
    void_function_call <i> (88)
        on left: 81
        on right: 30
    $@18 (89)
        on left: 80
        on right: 81
    function_call <i> (90)
        on left: 83
        on right: 66
    $@19 (91)
        on left: 82
        on right: 83
    argument <i> (92)
        on left: 84 85
        on right: 81 83
    arguments <i> (93)
        on left: 86 87
        on right: 85 87
    if_statement (94)
        on left: 88 89
        on right: 25
    if_part <i> (95)
        on left: 92
        on right: 88 89
    @20 (96)
        on left: 90
        on right: 92
    $@21 (97)
        on left: 91
        on right: 92
    rel_exp <i> (98)
        on left: 93
        on right: 37 60 92
    return_statement (99)
        on left: 94 95
        on right: 26


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (global_variable_list)

    program               go to state 1
    global_variable_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: global_variable_list . function_list
    3 global_variable_list: global_variable_list . global_variable

    _TYPE  shift, and go to state 4

    global_variable  go to state 5
    function_list    go to state 6
    function         go to state 7


State 3

    0 $accept: program $end .

    $default  accept


State 4

    4 global_variable: _TYPE . _ID _SEMICOLON
    8 function: _TYPE . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 8


State 5

    3 global_variable_list: global_variable_list global_variable .

    $default  reduce using rule 3 (global_variable_list)


State 6

    1 program: global_variable_list function_list .
    6 function_list: function_list . function

    _TYPE  shift, and go to state 9

    $default  reduce using rule 1 (program)

    function  go to state 10


State 7

    5 function_list: function .

    $default  reduce using rule 5 (function_list)


State 8

    4 global_variable: _TYPE _ID . _SEMICOLON
    8 function: _TYPE _ID . $@1 _LPAREN parameter _RPAREN body

    _SEMICOLON  shift, and go to state 11

    $default  reduce using rule 7 ($@1)

    $@1  go to state 12


State 9

    8 function: _TYPE . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 13


State 10

    6 function_list: function_list function .

    $default  reduce using rule 6 (function_list)


State 11

    4 global_variable: _TYPE _ID _SEMICOLON .

    $default  reduce using rule 4 (global_variable)


State 12

    8 function: _TYPE _ID $@1 . _LPAREN parameter _RPAREN body

    _LPAREN  shift, and go to state 14


State 13

    8 function: _TYPE _ID . $@1 _LPAREN parameter _RPAREN body

    $default  reduce using rule 7 ($@1)

    $@1  go to state 12


State 14

    8 function: _TYPE _ID $@1 _LPAREN . parameter _RPAREN body

    _TYPE  shift, and go to state 15

    $default  reduce using rule 9 (parameter)

    parameter   go to state 16
    parameters  go to state 17


State 15

   11 parameters: _TYPE . _ID

    _ID  shift, and go to state 18


State 16

    8 function: _TYPE _ID $@1 _LPAREN parameter . _RPAREN body

    _RPAREN  shift, and go to state 19


State 17

   10 parameter: parameters .
   12 parameters: parameters . _COMMA _TYPE _ID

    _COMMA  shift, and go to state 20

    $default  reduce using rule 10 (parameter)


State 18

   11 parameters: _TYPE _ID .

    $default  reduce using rule 11 (parameters)


State 19

    8 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN . body

    _LBRACKET  shift, and go to state 21

    body  go to state 22


State 20

   12 parameters: parameters _COMMA . _TYPE _ID

    _TYPE  shift, and go to state 23


State 21

   14 body: _LBRACKET . variable_list $@2 statement_list _RBRACKET

    $default  reduce using rule 15 (variable_list)

    variable_list  go to state 24


State 22

    8 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body .

    $default  reduce using rule 8 (function)


State 23

   12 parameters: parameters _COMMA _TYPE . _ID

    _ID  shift, and go to state 25


State 24

   14 body: _LBRACKET variable_list . $@2 statement_list _RBRACKET
   16 variable_list: variable_list . variable

    _TYPE  shift, and go to state 26

    $default  reduce using rule 13 ($@2)

    $@2       go to state 27
    variable  go to state 28


State 25

   12 parameters: parameters _COMMA _TYPE _ID .

    $default  reduce using rule 12 (parameters)


State 26

   18 variable: _TYPE . $@3 vars _SEMICOLON

    $default  reduce using rule 17 ($@3)

    $@3  go to state 29


State 27

   14 body: _LBRACKET variable_list $@2 . statement_list _RBRACKET

    $default  reduce using rule 21 (statement_list)

    statement_list  go to state 30


State 28

   16 variable_list: variable_list variable .

    $default  reduce using rule 16 (variable_list)


State 29

   18 variable: _TYPE $@3 . vars _SEMICOLON

    _ID  shift, and go to state 31

    vars  go to state 32


State 30

   14 body: _LBRACKET variable_list $@2 statement_list . _RBRACKET
   22 statement_list: statement_list . statement

    _IF        shift, and go to state 33
    _RETURN    shift, and go to state 34
    _ID        shift, and go to state 35
    _LBRACKET  shift, and go to state 36
    _RBRACKET  shift, and go to state 37
    _FOR       shift, and go to state 38
    _BRANCH    shift, and go to state 39
    _SWITCH    shift, and go to state 40
    _BREAK     shift, and go to state 41

    statement             go to state 42
    compound_statement    go to state 43
    assignment_statement  go to state 44
    for_statement         go to state 45
    branch_statement      go to state 46
    switch_statement      go to state 47
    break_statement       go to state 48
    increment_statement   go to state 49
    increment             go to state 50
    void_function_call    go to state 51
    if_statement          go to state 52
    if_part               go to state 53
    return_statement      go to state 54


State 31

   19 vars: _ID .

    $default  reduce using rule 19 (vars)


State 32

   18 variable: _TYPE $@3 vars . _SEMICOLON
   20 vars: vars . _COMMA _ID

    _SEMICOLON  shift, and go to state 55
    _COMMA      shift, and go to state 56


State 33

   92 if_part: _IF . _LPAREN @20 rel_exp $@21 _RPAREN statement

    _LPAREN  shift, and go to state 57


State 34

   94 return_statement: _RETURN . _SEMICOLON
   95                 | _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 58
    _INT_NUMBER   shift, and go to state 59
    _UINT_NUMBER  shift, and go to state 60
    _LPAREN       shift, and go to state 61
    _SEMICOLON    shift, and go to state 62
    _SUB          shift, and go to state 63

    conditional_exp  go to state 64
    num_exp          go to state 65
    exp              go to state 66
    literal          go to state 67
    increment        go to state 68
    function_call    go to state 69


State 35

   34 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON
   79 increment: _ID . _INC
   81 void_function_call: _ID . $@18 _LPAREN argument _RPAREN _SEMICOLON

    _ASSIGN  shift, and go to state 70
    _INC     shift, and go to state 71

    $default  reduce using rule 80 ($@18)

    $@18  go to state 72


State 36

   33 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 21 (statement_list)

    statement_list  go to state 73


State 37

   14 body: _LBRACKET variable_list $@2 statement_list _RBRACKET .

    $default  reduce using rule 14 (body)


State 38

   37 for_statement: _FOR . _LPAREN _TYPE _ID _SEMICOLON $@4 rel_exp $@5 _SEMICOLON _ID _INC _RPAREN statement

    _LPAREN  shift, and go to state 74


State 39

   46 branch_statement: _BRANCH . _LPAREN _ID _SEMICOLON literal _COMMA literal _COMMA literal _RPAREN $@6 _FIRST $@7 statement $@8 _SECOND $@9 statement $@10 _THIRD $@11 statement $@12 _OTHERWISE $@13 statement _END_BRANCH

    _LPAREN  shift, and go to state 75


State 40

   49 switch_statement: _SWITCH . _LPAREN _ID @14 _RPAREN $@15 _LBRACKET switch_sections _RBRACKET

    _LPAREN  shift, and go to state 76


State 41

   59 break_statement: _BREAK . _SEMICOLON

    _SEMICOLON  shift, and go to state 77


State 42

   22 statement_list: statement_list statement .

    $default  reduce using rule 22 (statement_list)


State 43

   23 statement: compound_statement .

    $default  reduce using rule 23 (statement)


State 44

   24 statement: assignment_statement .

    $default  reduce using rule 24 (statement)


State 45

   28 statement: for_statement .

    $default  reduce using rule 28 (statement)


State 46

   29 statement: branch_statement .

    $default  reduce using rule 29 (statement)


State 47

   31 statement: switch_statement .

    $default  reduce using rule 31 (statement)


State 48

   32 statement: break_statement .

    $default  reduce using rule 32 (statement)


State 49

   27 statement: increment_statement .

    $default  reduce using rule 27 (statement)


State 50

   78 increment_statement: increment . _SEMICOLON

    _SEMICOLON  shift, and go to state 78


State 51

   30 statement: void_function_call .

    $default  reduce using rule 30 (statement)


State 52

   25 statement: if_statement .

    $default  reduce using rule 25 (statement)


State 53

   88 if_statement: if_part .
   89             | if_part . _ELSE statement

    _ELSE  shift, and go to state 79

    $default  reduce using rule 88 (if_statement)


State 54

   26 statement: return_statement .

    $default  reduce using rule 26 (statement)


State 55

   18 variable: _TYPE $@3 vars _SEMICOLON .

    $default  reduce using rule 18 (variable)


State 56

   20 vars: vars _COMMA . _ID

    _ID  shift, and go to state 80


State 57

   92 if_part: _IF _LPAREN . @20 rel_exp $@21 _RPAREN statement

    $default  reduce using rule 90 (@20)

    @20  go to state 81


State 58

   65 exp: _ID .
   79 increment: _ID . _INC
   83 function_call: _ID . $@19 _LPAREN argument _RPAREN

    _INC  shift, and go to state 71

    _LPAREN   reduce using rule 82 ($@19)
    $default  reduce using rule 65 (exp)

    $@19  go to state 82


State 59

   76 literal: _INT_NUMBER .

    $default  reduce using rule 76 (literal)


State 60

   77 literal: _UINT_NUMBER .

    $default  reduce using rule 77 (literal)


State 61

   60 conditional_exp: _LPAREN . rel_exp _RPAREN _Q_MARK con_exp _TWO_DOTS con_exp
   67 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 58
    _INT_NUMBER   shift, and go to state 59
    _UINT_NUMBER  shift, and go to state 60
    _LPAREN       shift, and go to state 61
    _SUB          shift, and go to state 63

    conditional_exp  go to state 64
    num_exp          go to state 83
    exp              go to state 66
    literal          go to state 67
    increment        go to state 68
    function_call    go to state 69
    rel_exp          go to state 84


State 62

   94 return_statement: _RETURN _SEMICOLON .

    $default  reduce using rule 94 (return_statement)


State 63

   74 exp: _SUB . exp

    _ID           shift, and go to state 58
    _INT_NUMBER   shift, and go to state 59
    _UINT_NUMBER  shift, and go to state 60
    _LPAREN       shift, and go to state 61
    _SUB          shift, and go to state 63

    conditional_exp  go to state 64
    exp              go to state 85
    literal          go to state 67
    increment        go to state 68
    function_call    go to state 69


State 64

   69 exp: conditional_exp .

    $default  reduce using rule 69 (exp)


State 65

   95 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 86


State 66

   63 num_exp: exp .
   70 exp: exp . _ADD exp
   71    | exp . _SUB exp
   72    | exp . _MUL exp
   73    | exp . _DIV exp
   75    | exp . _POW exp

    _ADD  shift, and go to state 87
    _SUB  shift, and go to state 88
    _MUL  shift, and go to state 89
    _DIV  shift, and go to state 90
    _POW  shift, and go to state 91

    $default  reduce using rule 63 (num_exp)


State 67

   64 exp: literal .

    $default  reduce using rule 64 (exp)


State 68

   68 exp: increment .

    $default  reduce using rule 68 (exp)


State 69

   66 exp: function_call .

    $default  reduce using rule 66 (exp)


State 70

   34 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 58
    _INT_NUMBER   shift, and go to state 59
    _UINT_NUMBER  shift, and go to state 60
    _LPAREN       shift, and go to state 61
    _SUB          shift, and go to state 63

    conditional_exp  go to state 64
    num_exp          go to state 92
    exp              go to state 66
    literal          go to state 67
    increment        go to state 68
    function_call    go to state 69


State 71

   79 increment: _ID _INC .

    $default  reduce using rule 79 (increment)


State 72

   81 void_function_call: _ID $@18 . _LPAREN argument _RPAREN _SEMICOLON

    _LPAREN  shift, and go to state 93


State 73

   22 statement_list: statement_list . statement
   33 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 33
    _RETURN    shift, and go to state 34
    _ID        shift, and go to state 35
    _LBRACKET  shift, and go to state 36
    _RBRACKET  shift, and go to state 94
    _FOR       shift, and go to state 38
    _BRANCH    shift, and go to state 39
    _SWITCH    shift, and go to state 40
    _BREAK     shift, and go to state 41

    statement             go to state 42
    compound_statement    go to state 43
    assignment_statement  go to state 44
    for_statement         go to state 45
    branch_statement      go to state 46
    switch_statement      go to state 47
    break_statement       go to state 48
    increment_statement   go to state 49
    increment             go to state 50
    void_function_call    go to state 51
    if_statement          go to state 52
    if_part               go to state 53
    return_statement      go to state 54


State 74

   37 for_statement: _FOR _LPAREN . _TYPE _ID _SEMICOLON $@4 rel_exp $@5 _SEMICOLON _ID _INC _RPAREN statement

    _TYPE  shift, and go to state 95


State 75

   46 branch_statement: _BRANCH _LPAREN . _ID _SEMICOLON literal _COMMA literal _COMMA literal _RPAREN $@6 _FIRST $@7 statement $@8 _SECOND $@9 statement $@10 _THIRD $@11 statement $@12 _OTHERWISE $@13 statement _END_BRANCH

    _ID  shift, and go to state 96


State 76

   49 switch_statement: _SWITCH _LPAREN . _ID @14 _RPAREN $@15 _LBRACKET switch_sections _RBRACKET

    _ID  shift, and go to state 97


State 77

   59 break_statement: _BREAK _SEMICOLON .

    $default  reduce using rule 59 (break_statement)


State 78

   78 increment_statement: increment _SEMICOLON .

    $default  reduce using rule 78 (increment_statement)


State 79

   89 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 33
    _RETURN    shift, and go to state 34
    _ID        shift, and go to state 35
    _LBRACKET  shift, and go to state 36
    _FOR       shift, and go to state 38
    _BRANCH    shift, and go to state 39
    _SWITCH    shift, and go to state 40
    _BREAK     shift, and go to state 41

    statement             go to state 98
    compound_statement    go to state 43
    assignment_statement  go to state 44
    for_statement         go to state 45
    branch_statement      go to state 46
    switch_statement      go to state 47
    break_statement       go to state 48
    increment_statement   go to state 49
    increment             go to state 50
    void_function_call    go to state 51
    if_statement          go to state 52
    if_part               go to state 53
    return_statement      go to state 54


State 80

   20 vars: vars _COMMA _ID .

    $default  reduce using rule 20 (vars)


State 81

   92 if_part: _IF _LPAREN @20 . rel_exp $@21 _RPAREN statement

    _ID           shift, and go to state 58
    _INT_NUMBER   shift, and go to state 59
    _UINT_NUMBER  shift, and go to state 60
    _LPAREN       shift, and go to state 61
    _SUB          shift, and go to state 63

    conditional_exp  go to state 64
    num_exp          go to state 99
    exp              go to state 66
    literal          go to state 67
    increment        go to state 68
    function_call    go to state 69
    rel_exp          go to state 100


State 82

   83 function_call: _ID $@19 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 101


State 83

   67 exp: _LPAREN num_exp . _RPAREN
   93 rel_exp: num_exp . _RELOP num_exp

    _RPAREN  shift, and go to state 102
    _RELOP   shift, and go to state 103


State 84

   60 conditional_exp: _LPAREN rel_exp . _RPAREN _Q_MARK con_exp _TWO_DOTS con_exp

    _RPAREN  shift, and go to state 104


State 85

   70 exp: exp . _ADD exp
   71    | exp . _SUB exp
   72    | exp . _MUL exp
   73    | exp . _DIV exp
   74    | _SUB exp .
   75    | exp . _POW exp

    _POW  shift, and go to state 91

    $default  reduce using rule 74 (exp)


State 86

   95 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 95 (return_statement)


State 87

   70 exp: exp _ADD . exp

    _ID           shift, and go to state 58
    _INT_NUMBER   shift, and go to state 59
    _UINT_NUMBER  shift, and go to state 60
    _LPAREN       shift, and go to state 61
    _SUB          shift, and go to state 63

    conditional_exp  go to state 64
    exp              go to state 105
    literal          go to state 67
    increment        go to state 68
    function_call    go to state 69


State 88

   71 exp: exp _SUB . exp

    _ID           shift, and go to state 58
    _INT_NUMBER   shift, and go to state 59
    _UINT_NUMBER  shift, and go to state 60
    _LPAREN       shift, and go to state 61
    _SUB          shift, and go to state 63

    conditional_exp  go to state 64
    exp              go to state 106
    literal          go to state 67
    increment        go to state 68
    function_call    go to state 69


State 89

   72 exp: exp _MUL . exp

    _ID           shift, and go to state 58
    _INT_NUMBER   shift, and go to state 59
    _UINT_NUMBER  shift, and go to state 60
    _LPAREN       shift, and go to state 61
    _SUB          shift, and go to state 63

    conditional_exp  go to state 64
    exp              go to state 107
    literal          go to state 67
    increment        go to state 68
    function_call    go to state 69


State 90

   73 exp: exp _DIV . exp

    _ID           shift, and go to state 58
    _INT_NUMBER   shift, and go to state 59
    _UINT_NUMBER  shift, and go to state 60
    _LPAREN       shift, and go to state 61
    _SUB          shift, and go to state 63

    conditional_exp  go to state 64
    exp              go to state 108
    literal          go to state 67
    increment        go to state 68
    function_call    go to state 69


State 91

   75 exp: exp _POW . exp

    _ID           shift, and go to state 58
    _INT_NUMBER   shift, and go to state 59
    _UINT_NUMBER  shift, and go to state 60
    _LPAREN       shift, and go to state 61
    _SUB          shift, and go to state 63

    conditional_exp  go to state 64
    exp              go to state 109
    literal          go to state 67
    increment        go to state 68
    function_call    go to state 69


State 92

   34 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 110


State 93

   81 void_function_call: _ID $@18 _LPAREN . argument _RPAREN _SEMICOLON

    _ID           shift, and go to state 58
    _INT_NUMBER   shift, and go to state 59
    _UINT_NUMBER  shift, and go to state 60
    _LPAREN       shift, and go to state 61
    _SUB          shift, and go to state 63

    $default  reduce using rule 84 (argument)

    conditional_exp  go to state 64
    num_exp          go to state 111
    exp              go to state 66
    literal          go to state 67
    increment        go to state 68
    function_call    go to state 69
    argument         go to state 112
    arguments        go to state 113


State 94

   33 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 33 (compound_statement)


State 95

   37 for_statement: _FOR _LPAREN _TYPE . _ID _SEMICOLON $@4 rel_exp $@5 _SEMICOLON _ID _INC _RPAREN statement

    _ID  shift, and go to state 114


State 96

   46 branch_statement: _BRANCH _LPAREN _ID . _SEMICOLON literal _COMMA literal _COMMA literal _RPAREN $@6 _FIRST $@7 statement $@8 _SECOND $@9 statement $@10 _THIRD $@11 statement $@12 _OTHERWISE $@13 statement _END_BRANCH

    _SEMICOLON  shift, and go to state 115


State 97

   49 switch_statement: _SWITCH _LPAREN _ID . @14 _RPAREN $@15 _LBRACKET switch_sections _RBRACKET

    $default  reduce using rule 47 (@14)

    @14  go to state 116


State 98

   89 if_statement: if_part _ELSE statement .

    $default  reduce using rule 89 (if_statement)


State 99

   93 rel_exp: num_exp . _RELOP num_exp

    _RELOP  shift, and go to state 103


State 100

   92 if_part: _IF _LPAREN @20 rel_exp . $@21 _RPAREN statement

    $default  reduce using rule 91 ($@21)

    $@21  go to state 117


State 101

   83 function_call: _ID $@19 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 58
    _INT_NUMBER   shift, and go to state 59
    _UINT_NUMBER  shift, and go to state 60
    _LPAREN       shift, and go to state 61
    _SUB          shift, and go to state 63

    $default  reduce using rule 84 (argument)

    conditional_exp  go to state 64
    num_exp          go to state 111
    exp              go to state 66
    literal          go to state 67
    increment        go to state 68
    function_call    go to state 69
    argument         go to state 118
    arguments        go to state 113


State 102

   67 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 67 (exp)


State 103

   93 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 58
    _INT_NUMBER   shift, and go to state 59
    _UINT_NUMBER  shift, and go to state 60
    _LPAREN       shift, and go to state 61
    _SUB          shift, and go to state 63

    conditional_exp  go to state 64
    num_exp          go to state 119
    exp              go to state 66
    literal          go to state 67
    increment        go to state 68
    function_call    go to state 69


State 104

   60 conditional_exp: _LPAREN rel_exp _RPAREN . _Q_MARK con_exp _TWO_DOTS con_exp

    _Q_MARK  shift, and go to state 120


State 105

   70 exp: exp . _ADD exp
   70    | exp _ADD exp .
   71    | exp . _SUB exp
   72    | exp . _MUL exp
   73    | exp . _DIV exp
   75    | exp . _POW exp

    _MUL  shift, and go to state 89
    _DIV  shift, and go to state 90
    _POW  shift, and go to state 91

    $default  reduce using rule 70 (exp)


State 106

   70 exp: exp . _ADD exp
   71    | exp . _SUB exp
   71    | exp _SUB exp .
   72    | exp . _MUL exp
   73    | exp . _DIV exp
   75    | exp . _POW exp

    _MUL  shift, and go to state 89
    _DIV  shift, and go to state 90
    _POW  shift, and go to state 91

    $default  reduce using rule 71 (exp)


State 107

   70 exp: exp . _ADD exp
   71    | exp . _SUB exp
   72    | exp . _MUL exp
   72    | exp _MUL exp .
   73    | exp . _DIV exp
   75    | exp . _POW exp

    _POW  shift, and go to state 91

    $default  reduce using rule 72 (exp)


State 108

   70 exp: exp . _ADD exp
   71    | exp . _SUB exp
   72    | exp . _MUL exp
   73    | exp . _DIV exp
   73    | exp _DIV exp .
   75    | exp . _POW exp

    _POW  shift, and go to state 91

    $default  reduce using rule 73 (exp)


State 109

   70 exp: exp . _ADD exp
   71    | exp . _SUB exp
   72    | exp . _MUL exp
   73    | exp . _DIV exp
   75    | exp . _POW exp
   75    | exp _POW exp .

    _POW  shift, and go to state 91

    $default  reduce using rule 75 (exp)


State 110

   34 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 34 (assignment_statement)


State 111

   86 arguments: num_exp .

    $default  reduce using rule 86 (arguments)


State 112

   81 void_function_call: _ID $@18 _LPAREN argument . _RPAREN _SEMICOLON

    _RPAREN  shift, and go to state 121


State 113

   85 argument: arguments .
   87 arguments: arguments . _COMMA num_exp

    _COMMA  shift, and go to state 122

    $default  reduce using rule 85 (argument)


State 114

   37 for_statement: _FOR _LPAREN _TYPE _ID . _SEMICOLON $@4 rel_exp $@5 _SEMICOLON _ID _INC _RPAREN statement

    _SEMICOLON  shift, and go to state 123


State 115

   46 branch_statement: _BRANCH _LPAREN _ID _SEMICOLON . literal _COMMA literal _COMMA literal _RPAREN $@6 _FIRST $@7 statement $@8 _SECOND $@9 statement $@10 _THIRD $@11 statement $@12 _OTHERWISE $@13 statement _END_BRANCH

    _INT_NUMBER   shift, and go to state 59
    _UINT_NUMBER  shift, and go to state 60

    literal  go to state 124


State 116

   49 switch_statement: _SWITCH _LPAREN _ID @14 . _RPAREN $@15 _LBRACKET switch_sections _RBRACKET

    _RPAREN  shift, and go to state 125


State 117

   92 if_part: _IF _LPAREN @20 rel_exp $@21 . _RPAREN statement

    _RPAREN  shift, and go to state 126


State 118

   83 function_call: _ID $@19 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 127


State 119

   93 rel_exp: num_exp _RELOP num_exp .

    $default  reduce using rule 93 (rel_exp)


State 120

   60 conditional_exp: _LPAREN rel_exp _RPAREN _Q_MARK . con_exp _TWO_DOTS con_exp
